...
    @IBOutlet weak var employerAddresslbl: UITextField!
    @IBOutlet weak var employerPhoneNumberlbl: UITextField!
    
    override func viewDidLoad() {
        let id = NeuroID.getSessionID()
        sessionidlbl.id = "sessionidlbl"
        firstNamelbl.id = "firstName"
        lastNamelbl.id = "lastName"
        dateBirthlbl.id = "dobMonth"
        emaillbl.id = "email"
        homeCitylbl.id = "city"
        homeZipCodelbl.id = "homeZipCode"
        phoneNumberlbl.id = "phoneNumber"
        employerlbl.id = "employerlbl"
        employerAddresslbl.id = "streetAddressLine1"
        employerPhoneNumberlbl.id = "employerPhoneNumberlbl"

...
