...
//
//  Created by jose perez on 12/05/22.
//
import UIKit
import Neuro_ID
final class NILoanOptionsVC: UIViewController {
    @IBOutlet weak var contentTableView: UITableView!
    private var dataSource: [String] = ["Welcome!", "Hidden" ,"First Name", "Last Name", "Next"]
    private var newInfo: [String] = ["Address", "Employer Address"]
    override func viewDidLoad() {
        contentTableView.id = "contentTableView"
        super.viewDidLoad()
        setupTableView()
        setupKeyboardHiding()
        setupNavBarImage()
...
