...
                                        <constraint firstItem="PPV-hk-ftj" firstAttribute="height" secondItem="R8o-Y1-3HQ" secondAttribute="height" multiplier="0.4" id="qQr-Ls-NE9"/>
                                    </constraints>
                                </view>
                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NNj-bH-H5u">
                                    <rect key="frame" x="0.0" y="113.5" width="375" height="90"/>
                                    <subviews>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="First Name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p5C-jW-obR">
                                            <rect key="frame" x="16" y="16" width="343" height="21"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                            <nil key="textColor"/>
                                            <nil key="highlightedColor"/>
                                        </label>
                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="First Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="12x-Rr-8Uz">
...
                                    <subviews>
                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gV9-N6-vOI">
                                            <rect key="frame" x="16" y="28" width="343" height="34"/>
                                            <color key="backgroundColor" red="0.095287887660000001" green="0.33481196740000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                            <state key="normal" title="Button"/>
                                            <buttonConfiguration key="configuration" style="plain" title="Continue"/>
                                            <connections>
                                                <action selector="continueAction:" destination="-1" eventType="touchUpInside" id="PwF-3Y-Ob8"/>
                                            </connections>
                                        </button>
                                    </subviews>
                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
...
